--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
         <li><a href="/">访问主页</a></li>
         <li><a href="/events">活动</a></li>
         <li><a href="/stories">团队成长</a></li>
+        <li><a href="http://s.ymzg.org" target="_blank">随义</a></li>
         <!-- <li><a href="">联系我们</a></li> -->
       </ul>
 
