--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -50,7 +50,7 @@
                       </div>
                   </div>
                   <div id="event-description">
-                      <%= event.description %>
+                      <%=raw event.description %>
                   </div>
               </div>
           </div>
