--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -25,7 +25,7 @@
     <p class="text-left">
         【义梦中国】是总部设在汶川青少年活动中心的志愿者（义工）培养基地，致力于为中国培养优秀的学生志愿者，为志愿者打造“成长自己服务别人”的公益平台。义梦学员用义教的方式学习，用行义的方式追梦。志愿学习，我们义不容辞; 快乐追梦，我们义无反顾。
     </p>
-    <a class="primary button add-new" href="https://www.jinshuju.net/f/sEZyPe" target="_blank">加入我们</a>
+    <!-- <a class="primary button add-new" href="https://www.jinshuju.net/f/sEZyPe" target="_blank">加入我们</a> -->
   </section>
 </div>
 
@@ -39,7 +39,7 @@
               <div class="event">
                   <div class="clear event-title-row">
                       <h3 class="subtitle-h3 float-left"><%=event.title%></h3>
-                      <span>
+                      <span style="margin: 10px; float: right;">
                         <%=link_to "我要参加",event.event_url, :class=>"primary button add-new", :id=>"event-register-button", :target => '_blank'%>
                      </span>
                   </div>
